--- a/index.html
+++ b/index.html
@@ -81,30 +81,30 @@
      <nav>               
         <p id="FotoKenangan"></p><h2 style="margin-top: 170px; margin-left: 210px; width: 50px; height: 90px;"></h2>
         <div class="center-image-flex" >
-            <img src="1.jpg" alt="Contoh Gambar" style="height: 300px; width: 200px;">
+            <img src="1.JPG" alt="Contoh Gambar" style="height: 300px; width: 200px;">
           </div>
         <div class="oval-frame " >
-            <img src="2.jpg" alt="Contoh Gambar" style="height: 300px; width: 200px;">
+            <img src="2.JPG" alt="Contoh Gambar" style="height: 300px; width: 200px;">
           </div>
      </nav>
 
      <nav>               
       <p id="FotoKenangan"></p><h2 style="margin-top: 340px; margin-left: 120px; width: 100px; height: 180px;"></h2>
       <div class="center-image-flex" >
-          <img src="3.jpg" alt="Contoh Gambar" style="height: 300px; width: 200px;">
+          <img src="3.JPG" alt="Contoh Gambar" style="height: 300px; width: 200px;">
         </div>
       <div class="oval-frame " >
-          <img src="4.jpg" alt="Contoh Gambar" style="height: 300px; width: 200px;">
+          <img src="4.JPG" alt="Contoh Gambar" style="height: 300px; width: 200px;">
         </div>
    </nav>
 
    <nav>               
     <p id="FotoKenangan"></p><h2 style="margin-top: 510px; margin-left: 120px; width: 150px; height: 270px;"></h2>
     <div class="center-image-flex" >
-        <img src="5.jpg" alt="Contoh Gambar" style="height: 300px; width: 200px;">
+        <img src="5.JPG" alt="Contoh Gambar" style="height: 300px; width: 200px;">
       </div>
     <div class="oval-frame " >
-        <img src="6.jpg" alt="Contoh Gambar" style="height: 300px; width: 200px;">
+        <img src="6.JPG" alt="Contoh Gambar" style="height: 300px; width: 200px;">
       </div>
    </nav>
 
