--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="content">
             <h1 class="link" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="700"><p  class="fire-text2">Welcome To My<span class="fire-text"> Web</span></h1>
             <h2 class="typing-text" class="link" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="900" >I'm a <span></span></h2>
-            <p class="link" data-aos="flip-up" data-aos-duration="1500" data-aos-delay="1100">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, tempore voluptatibus.</p>
+            <p class="link" data-aos="flip-up" data-aos-duration="1500" data-aos-delay="1100">ABCDEFGHIJKLMNOPQRSTUVWXYZ.</p>
               <div class="social-links">
               <a href="" data-aos="zoom-out" data-aos-duration="1500" data-aos-delay="1200"><i class="fa-brands fa-linkedin"></i></a>
               <a href="" data-aos="zoom-out" data-aos-duration="1500" data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
